fix(front): search btn sticking out

--- a/front/src/components/ListWithSearch/ListWithSearch.less
+++ b/front/src/components/ListWithSearch/ListWithSearch.less
@@ -4,8 +4,11 @@
   &-header {
     margin-bottom: 0;
   }
-
+  
   &-input {
     margin-bottom: @padding-tiny;
+    .ant-btn {
+      height: 33px;
+    }
   }
 }
